--- a/platform/netfilter/nftables.conf
+++ b/platform/netfilter/nftables.conf
@@ -24,7 +24,7 @@ table inet libre {
 				192.168.1.0/24,
 				10.0.0.0/8
 			}
-			udp dport { 5060 } ip saddr $RTPSET accept
+			udp dport { 10000-60000 } ip saddr $RTPSET accept
 
 			# accept neighbour discovery otherwise connectivity breaks
 			#icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
