update rsyslog var

--- a/platform/rsyslog/rsyslog.d/libresbc.conf
+++ b/platform/rsyslog/rsyslog.d/libresbc.conf
@@ -4,11 +4,11 @@ template(name="cloud" type="string" string="<%PRI%>%TIMESTAMP:::date-rfc3339% %H
 template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%\n")
 
 local5.*    {{logdir}}/daemon.log;local
-local6.*    {{logdir}}/callflow.log;local
+local6.*    {{logdir}}/callctl.log;local
 local7.*    {{logdir}}/liberator.log;local
 
 {% if logstash %}
-local5.*    {{rsyslog_convention[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
-local6.*    {{rsyslog_convention[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
-local7.*    {{rsyslog_convention[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
+local5.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
+local6.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
+local7.*    {{rsyslogvar[logstash.protocol]}}{{logstash.host}}:{{logstash.port}};cloud
 {% endif %}
