access api configurable

--- a/platform/nginx/libresbc.conf
+++ b/platform/nginx/libresbc.conf
@@ -17,8 +17,8 @@
 
 # RATE LIMITER
 # https://www.nginx.com/blog/rate-limiting-nginx
-limit_req_zone $binary_remote_addr zone=purecodelimiter:10m rate=1r/s;
-limit_req_zone $binary_remote_addr zone=restclientlimiter:10m rate=25r/m;
+limit_req_zone $binary_remote_addr zone=purecodelimiter:10m rate=2r/s;
+limit_req_zone $binary_remote_addr zone=restclientlimiter:10m rate=1r/s;
 
 upstream uvicorn {
         server 127.0.0.1:8080;
@@ -42,7 +42,45 @@ server {
 
         server_name _;
 
-        location ~ ^/(documents|healthcheck|preconfig) {
+        {%- if interface.management.apis.fsxmlapi %}
+        location /fsxmlapi {
+                limit_req zone=restclientlimiter burst=8 nodelay; 
+                limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
+                # First attempt to serve request as file, then
+                # as directory, then fall back to displaying a 404.
+                # try_files $uri $uri/ =404;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Host $http_host;
+                proxy_pass_header Server;
+                proxy_redirect off;
+                proxy_connect_timeout 300;
+                proxy_send_timeout 300;
+                proxy_read_timeout 300;
+                proxy_pass http://uvicorn;
+        }
+        {%- endif %}
+
+        {%- if interface.management.apis.libreapi %}
+        location /libreapi {
+                limit_req zone=restclientlimiter burst=8 nodelay; 
+                limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
+                # First attempt to serve request as file, then
+                # as directory, then fall back to displaying a 404.
+                # try_files $uri $uri/ =404;
+                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+                proxy_set_header X-Forwarded-Proto $scheme;
+                proxy_set_header Host $http_host;
+                proxy_pass_header Server;
+                proxy_redirect off;
+                proxy_connect_timeout 300;
+                proxy_send_timeout 300;
+                proxy_read_timeout 300;
+                proxy_pass http://uvicorn;
+        }
+        {%- endif %}
+
+        location ~ ^/(?!(libreapi|fsxmlapi)|apidocs|heartbeat) {
                 limit_req zone=purecodelimiter burst=1 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
                 #auth_basic "Restricted Content";
@@ -60,24 +98,7 @@ server {
                 proxy_pass http://uvicorn;
         }
 
-        location / {
-                limit_req zone=restclientlimiter burst=8 nodelay; 
-                limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
-                # First attempt to serve request as file, then
-                # as directory, then fall back to displaying a 404.
-                # try_files $uri $uri/ =404;
-                proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-                proxy_set_header X-Forwarded-Proto $scheme;
-                proxy_set_header Host $http_host;
-                proxy_pass_header Server;
-                proxy_redirect off;
-                proxy_connect_timeout 300;
-                proxy_send_timeout 300;
-                proxy_read_timeout 300;
-                proxy_pass http://uvicorn;
-        }
-
         location /.well-known {
 		    alias /var/www/.well-known;
- 	    }
+ 	}
 }
