--- a/platform/nginx/libresbc.conf
+++ b/platform/nginx/libresbc.conf
@@ -80,7 +80,7 @@ server {
         }
         {%- endif %}
 
-        location ~ ^/(?!(libreapi|fsxmlapi)|apidocs|heartbeat) {
+        location ~ ^/(?!(libreapi|fsxmlapi)) {
                 limit_req zone=purecodelimiter burst=1 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
                 #auth_basic "Restricted Content";
