--- a/platform/nginx/libresbc.conf
+++ b/platform/nginx/libresbc.conf
@@ -42,7 +42,7 @@ server {
 
         server_name _;
 
-        {%- if interface.management.apis.fsxmlapi %}
+        {% if interface.management.apis.fsxmlapi -%}
         location /fsxmlapi {
                 limit_req zone=restclientlimiter burst=8 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
@@ -59,9 +59,9 @@ server {
                 proxy_read_timeout 300;
                 proxy_pass http://uvicorn;
         }
-        {%- endif %}
+        {% endif %}
 
-        {%- if interface.management.apis.libreapi %}
+        {% if interface.management.apis.libreapi -%}
         location /libreapi {
                 limit_req zone=restclientlimiter burst=8 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
@@ -78,7 +78,7 @@ server {
                 proxy_read_timeout 300;
                 proxy_pass http://uvicorn;
         }
-        {%- endif %}
+        {% endif %}
 
         location ~ ^/(?!(libreapi|fsxmlapi)) {
                 limit_req zone=purecodelimiter burst=1 nodelay; 
