--- a/platform/rsyslog/rsyslog.d/libresbc.conf
+++ b/platform/rsyslog/rsyslog.d/libresbc.conf
@@ -4,7 +4,7 @@ template(name="cloud" type="string" string="<%PRI%>%TIMESTAMP:::date-rfc3339% %H
 template(name="local" type="string" string="%TIMESTAMP:::date-rfc3339% %HOSTNAME% program=libresbc, pid=%procid%, %msg%\n")
 
 local5.*    {{logdir}}/daemon.log;local
-local6.*    {{logdir}}/callctl.log;local
+local6.*    {{logdir}}/enginectl.log;local
 local7.*    {{logdir}}/liberator.log;local
 
 {% if logstash %}
