--- a/platform/netfilter/nftables.conf
+++ b/platform/netfilter/nftables.conf
@@ -1,42 +1,42 @@
 #!/usr/sbin/nft -f
+# https://cryptsus.com/blog/setting-up-nftables-firewall.html
+# https://github.com/krabelize/nftables-firewall-config/blob/master/nftables.conf
+# https://blog.cloudflare.com/how-to-drop-10-million-packets
+# https://github.com/cloudflare/cloudflare-blog
 
 flush ruleset
 
-table inet libre {
-	chain input {
+table inet LIBREFW {
+	chain INCOMING {
+		# type filter hook prerouting priority 0; policy drop;
 		type filter hook input priority 0; policy drop;
-			# accept any localhost traffic
-			iif lo counter accept
+		    iifname lo accept
+			iifname lo ip saddr != 127.0.0.0/8 counter drop
+			iifname lo ip6 saddr != ::1/128 counter drop
+			iifname != lo ip daddr 127.0.0.0/8 counter drop
 
-			# accept traffic originated from us
-			ct state established,related counter accept
+			ct state invalid counter drop comment "early drop of invalid packets"
+			ct state {established, related} counter accept
 
-			# Allow SIP traffic
+			# SIGNALLING SET PER SIPPROFILE
 			define SIPSET = {
 				192.168.1.0/24,
 				10.0.0.0/8
 			}
 			tcp dport { 5060,5061 } ip saddr $SIPSET accept
 			udp dport { 5060 } ip saddr $SIPSET accept
-
-			# Allow RTP traffic
-			define RTPSET = {
-				192.168.1.0/24,
-				10.0.0.0/8
-			}
-			udp dport { 10000-60000 } ip saddr $RTPSET accept
-
+			#
+			tcp dport 22 ip saddr 0.0.0.0/0 accept
 			# accept neighbour discovery otherwise connectivity breaks
 			#icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
 			icmp type echo-request limit rate 1/second accept
-
 			# count and drop any other traffic
 			counter drop
 	}
-	chain forward {
-		type filter hook forward priority 0; policy drop;
-	}
-	chain output {
+	chain OUTGOING {
 		type filter hook output priority 0;
+	}
+	chain TRANSFER {
+		type filter hook forward priority 0; policy drop;
 	}
 }
