--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -17,19 +17,22 @@ table inet LIBREFW {
 
 			ct state invalid counter drop comment "early drop of invalid packets"
 			ct state {established, related} counter accept
-
-			# SIGNALLING SET PER SIPPROFILE
-			define SIPSET = {
-				192.168.1.0/24,
-				10.0.0.0/8
-			}
-			tcp dport { 5060,5061 } ip saddr $SIPSET accept
-			udp dport { 5060 } ip saddr $SIPSET accept
-			#
-			tcp dport 22 ip saddr 0.0.0.0/0 accept
+			#---------------------------------------------------------------------
+			define RTPPORTS = { {{rtpportrange|join('-')}} }
+			#---------------------------------------------------------------------
+			{%- for name, data in sipprofiles.items() %}
+			# TRAFFIC FILTER PER SIP PROFILE - {{name|upper}}
+			define FESIP{{loop.index}} = { {{data.farendsipaddrs}} }
+			define FERTP{{loop.index}} = { {{data.farendrtpaddrs}} }
+			tcp dport { {{data.siptcpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+			udp dport { {{data.sipudpports|join(',')}} } ip saddr $FESIP{{loop.index}} ip daddr {{data.sip_ip}} counter accept
+			udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
+			{%- endfor %}
+			#---------------------------------------------------------------------
+			tcp dport 22 ip saddr 0.0.0.0/0 counter accept
 			# accept neighbour discovery otherwise connectivity breaks
 			#icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
-			icmp type echo-request limit rate 1/second accept
+			icmp type echo-request limit rate 1/second counter accept
 			# count and drop any other traffic
 			counter drop
 	}
