--- a/liberator/templates/nft/nftables.j2.conf
+++ b/liberator/templates/nft/nftables.j2.conf
@@ -29,10 +29,14 @@ table inet LIBREFW {
 			udp dport $RTPPORTS ip saddr $FERTP{{loop.index}} ip daddr {{data.rtp_ip}} counter accept
 			{%- endfor %}
 			#---------------------------------------------------------------------
+			# PRECONFIGURED FIREWALL
+			include "*.libre.nft"
+			#---------------------------------------------------------------------
 			tcp dport 22 ip saddr 0.0.0.0/0 counter accept
 			# accept neighbour discovery otherwise connectivity breaks
 			#icmpv6 type { nd-neighbor-solicit, echo-request, nd-router-advert, nd-neighbor-advert } counter accept
 			icmp type echo-request limit rate 1/second counter accept
+
 			# count and drop any other traffic
 			counter drop
 	}
