--- a/platform/kamailio/kamailio.cfg
+++ b/platform/kamailio/kamailio.cfg
@@ -110,31 +110,7 @@ log_stderror=no
 memdbg=5
 memlog=5
 
-#!ifdef WITH_CFGLUA
 log_prefix="LUA {$rm}: "
-#!else
-#!ifdef WITH_CFGPYTHON
-log_prefix="PY2 {$rm}: "
-#!else
-#!ifdef WITH_CFGPYTHON3
-log_prefix="PY3 {$rm}: "
-#!else
-#!ifdef WITH_CFGJSDT
-log_prefix="JSC {$rm}: "
-#!else
-#!ifdef WITH_CFGSQLANG
-log_prefix="SQL {$rm}: "
-#!else
-#!ifdef WITH_CFGJRUBY
-log_prefix="RUB {$rm}: "
-#!else
-log_prefix="NAT {$rm}: "
-#!endif
-#!endif
-#!endif
-#!endif
-#!endif
-#!endif
 
 latency_cfg_log=2
 latency_log=2
@@ -226,9 +202,7 @@ loadmodule "htable.so"
 loadmodule "pike.so"
 #!endif
 
-#!ifdef WITH_CFGLUA
 loadmodule "app_lua.so"
-#!endif
 
 #!ifdef WITH_CFGPYTHON
 loadmodule "app_python.so"
@@ -381,45 +355,7 @@ modparam("pike", "remove_latency", 4)
 modparam("htable", "htable", "ipban=>size=8;autoexpire=300;")
 #!endif
 
-#!ifdef WITH_CFGPYTHON
-modparam("app_python", "load", "/usr/local/etc/kamailio/kamailio-basic-kemi-python.py")
-cfgengine "python"
-#!else
 
-#!ifdef WITH_CFGPYTHON3
-modparam("app_python3", "load", "/usr/local/etc/kamailio/kamailio-basic-kemi-python.py")
-cfgengine "python"
-#!else
-
-#!ifdef WITH_CFGLUA
+# ----- LUA ROUTING ENGINE -----
 modparam("app_lua", "load", "/usr/local/etc/kamailio/routing.kemi.lua")
 cfgengine "lua"
-#!else
-
-#!ifdef WITH_CFGJSDT
-modparam("app_jsdt", "load", "/usr/local/etc/kamailio/kamailio-basic-kemi-jsdt.js")
-cfgengine "jsdt"
-#!else
-
-#!ifdef WITH_CFGSQLANG
-modparam("app_sqlang", "load", "/usr/local/etc/kamailio/kamailio-basic-kemi-sqlang.sq")
-cfgengine "sqlang"
-#!else
-
-#!ifdef WITH_CFGRUBY
-modparam("app_ruby", "load", "/usr/local/etc/kamailio/kamailio-basic-kemi-ruby.rb")
-cfgengine "ruby"
-#!else
-cfgengine "native"
-include_file "/usr/local/etc/kamailio/kamailio-basic-kemi-native.cfg"
-#!endif
-
-#!endif
-
-#!endif
-
-#!endif
-
-#!endif
-
-#!endif
