--- a/platform/kamailio/kamailio.cfg
+++ b/platform/kamailio/kamailio.cfg
@@ -1,22 +1,5 @@
 #!KAMAILIO
 #
-# Kamailio SIP Server v5.0 - default configuration script
-#     - web: http://www.kamailio.org
-#     - git: http://sip-router.org
-#
-# Direct your questions about this file to: <sr-users@lists.kamailio.org>
-#
-# Refer to the Core CookBook at http://www.kamailio.org/wiki/
-# for an explanation of possible statements, functions and parameters.
-#
-# Several features can be enabled using '#!define WITH_FEATURE' directives:
-#
-# *** To run in debug mode:
-#     - define WITH_DEBUG
-#
-# *** To enable mysql:
-#     - define WITH_MYSQL
-#
 # *** To enable authentication execute:
 #     - enable mysql
 #     - define WITH_AUTH
@@ -43,50 +26,16 @@
 #     - adjust CFGDIR/tls.cfg as needed
 #     - define WITH_TLS
 #
-# *** To enhance accounting execute:
-#     - enable mysql
-#     - define WITH_ACCDB
-#     - add following columns to database
-#!ifdef ACCDB_COMMENT
-  ALTER TABLE acc ADD COLUMN src_user VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE acc ADD COLUMN src_domain VARCHAR(128) NOT NULL DEFAULT '';
-  ALTER TABLE acc ADD COLUMN src_ip varchar(64) NOT NULL default '';
-  ALTER TABLE acc ADD COLUMN dst_ouser VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE acc ADD COLUMN dst_user VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE acc ADD COLUMN dst_domain VARCHAR(128) NOT NULL DEFAULT '';
-  ALTER TABLE missed_calls ADD COLUMN src_user VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE missed_calls ADD COLUMN src_domain VARCHAR(128) NOT NULL DEFAULT '';
-  ALTER TABLE missed_calls ADD COLUMN src_ip varchar(64) NOT NULL default '';
-  ALTER TABLE missed_calls ADD COLUMN dst_ouser VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE missed_calls ADD COLUMN dst_user VARCHAR(64) NOT NULL DEFAULT '';
-  ALTER TABLE missed_calls ADD COLUMN dst_domain VARCHAR(128) NOT NULL DEFAULT '';
-#!endif
 
-#!define WITH_MYSQL
-#!define WITH_AUTH
-#!define WITH_IPAUTH
-#!define WITH_USRLOCDB
-#!define WITH_NAT
-#!define WITH_ANTIFLOOD
-#!define WITH_ACCDB
-
-####### Include Local Config If Exists #########
-import_file "kamailio-local.cfg"
+# #!define WITH_AUTH
+# #!define WITH_IPAUTH
+# #!define WITH_USRLOCDB
 
 ####### Defined Values #########
-
-# *** Value defines - IDs used later in config
-#!ifdef WITH_MYSQL
-# - database URL - used to connect to database server by modules such
-#       as: auth_db, acc, usrloc, a.s.o.
-#!ifndef DBURL
-#!define DBURL "mysql://kamailio:kamailiorw@localhost/kamailio"
-#!endif
-#!endif
-#!define MULTIDOMAIN 0
+# #!define MULTIDOMAIN 0
 
 # - flags
-#   FLT_ - per transaction (message) flags
+# FLT_ - per transaction (message) flags
 #	FLB_ - per branch flags
 #!define FLT_ACC 1
 #!define FLT_ACCMISSED 2
@@ -98,14 +47,11 @@ import_file "kamailio-local.cfg"
 
 ####### Global Parameters #########
 
+#!define DBURL "text:///usr/local/etc/kamailio/dbtext"
+
 ### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
-#!ifdef WITH_DEBUG
 debug=4
 log_stderror=yes
-#!else
-debug=2
-log_stderror=no
-#!endif
 
 memdbg=5
 memlog=5
@@ -116,7 +62,7 @@ latency_cfg_log=2
 latency_log=2
 latency_limit_action=100000
 latency_limit_db=200000
-log_facility=LOG_LOCAL0
+log_facility=LOG_LOCAL5
 
 fork=yes
 children=2
@@ -137,7 +83,7 @@ children=2
 
 /* port to listen to
  * - can be specified more than once if needed to listen on many ports */
-port=5060
+port=5080
 
 #!ifdef WITH_TLS
 enable_tls=yes
@@ -152,10 +98,6 @@ tcp_connection_lifetime=3605
 /* set paths to location of modules (to sources or installation folders) */
 # mpath="/usr/local/lib/kamailio/modules/"
 
-#!ifdef WITH_MYSQL
-loadmodule "db_mysql.so"
-#!endif
-
 loadmodule "jsonrpcs.so"
 loadmodule "kex.so"
 loadmodule "corex.so"
@@ -166,6 +108,7 @@ loadmodule "rr.so"
 loadmodule "pv.so"
 loadmodule "maxfwd.so"
 loadmodule "usrloc.so"
+loadmodule "db_text.so"
 loadmodule "registrar.so"
 loadmodule "textops.so"
 loadmodule "siputils.so"
@@ -184,45 +127,19 @@ loadmodule "permissions.so"
 #!endif
 #!endif
 
-#!ifdef WITH_NAT
 loadmodule "nathelper.so"
-loadmodule "rtpproxy.so"
-#!endif
 
 #!ifdef WITH_TLS
 loadmodule "tls.so"
 #!endif
 
-#!ifdef WITH_DEBUG
 loadmodule "debugger.so"
-#!endif
 
-#!ifdef WITH_ANTIFLOOD
+# ---- antiflood -----
 loadmodule "htable.so"
 loadmodule "pike.so"
-#!endif
 
 loadmodule "app_lua.so"
-
-#!ifdef WITH_CFGPYTHON
-loadmodule "app_python.so"
-#!endif
-
-#!ifdef WITH_CFGPYTHON3
-loadmodule "app_python3.so"
-#!endif
-
-#!ifdef WITH_CFGJSDT
-loadmodule "app_jsdt.so"
-#!endif
-
-#!ifdef WITH_CFGRUBY
-loadmodule "app_ruby.so"
-#!endif
-
-#!ifdef WITH_CFGSQLANG
-loadmodule "app_sqlang.so"
-#!endif
 
 # ----------------- setting module-specific parameters ---------------
 
@@ -263,6 +180,8 @@ modparam("registrar", "max_expires", 3600)
 # set it to 1 to enable GRUU
 modparam("registrar", "gruu_enabled", 0)
 
+# ----- db_text params -----
+modparam("db_text", "db_mode", 1)
 
 # ----- acc params -----
 /* what special events should be accounted ? */
@@ -280,16 +199,6 @@ modparam("acc", "log_extra",
 	"src_user=$fU;src_domain=$fd;src_ip=$si;"
 	"dst_ouser=$tU;dst_user=$rU;dst_domain=$rd")
 modparam("acc", "failed_transaction_flag", FLT_ACCFAILED)
-/* enhanced DB accounting */
-#!ifdef WITH_ACCDB
-modparam("acc", "db_flag", FLT_ACC)
-modparam("acc", "db_missed_flag", FLT_ACCMISSED)
-modparam("acc", "db_url", DBURL)
-modparam("acc", "db_extra",
-	"src_user=$fU;src_domain=$fd;src_ip=$si;"
-	"dst_ouser=$tU;dst_user=$rU;dst_domain=$rd")
-#!endif
-
 
 # ----- usrloc params -----
 /* enable DB persistency for location entries */
@@ -317,11 +226,6 @@ modparam("permissions", "db_mode", 1)
 
 #!endif
 
-
-#!ifdef WITH_NAT
-# ----- rtpproxy params -----
-modparam("rtpproxy", "rtpproxy_sock", "udp:127.0.0.1:7722")
-
 # ----- nathelper params -----
 modparam("nathelper", "natping_interval", 30)
 modparam("nathelper", "ping_nated_only", 1)
@@ -331,7 +235,6 @@ modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
 # params needed for NAT traversal in other modules
 modparam("nathelper|registrar", "received_avp", "$avp(RECEIVED)")
 modparam("usrloc", "nat_bflag", FLB_NATB)
-#!endif
 
 
 #!ifdef WITH_TLS
@@ -339,12 +242,9 @@ modparam("usrloc", "nat_bflag", FLB_NATB)
 modparam("tls", "config", "/usr/local/etc/kamailio/tls.cfg")
 #!endif
 
-#!ifdef WITH_DEBUG
 # ----- debugger params -----
 modparam("debugger", "cfgtrace", 1)
-#!endif
 
-#!ifdef WITH_ANTIFLOOD
 # ----- pike params -----
 modparam("pike", "sampling_time_unit", 2)
 modparam("pike", "reqs_density_per_unit", 16)
@@ -353,9 +253,8 @@ modparam("pike", "remove_latency", 4)
 # ----- htable params -----
 # ip ban htable with autoexpire after 5 minutes
 modparam("htable", "htable", "ipban=>size=8;autoexpire=300;")
-#!endif
 
 
 # ----- LUA ROUTING ENGINE -----
-modparam("app_lua", "load", "/usr/local/etc/kamailio/routing.kemi.lua")
+modparam("app_lua", "load", "{{rundir}}/callng/kami.lua")
 cfgengine "lua"
