--- a/platform/kamailio/kamailio.cfg
+++ b/platform/kamailio/kamailio.cfg
@@ -37,11 +37,7 @@
 # - flags
 # FLT_ - per transaction (message) flags
 #	FLB_ - per branch flags
-#!define FLT_ACC 1
-#!define FLT_ACCMISSED 2
-#!define FLT_ACCFAILED 3
 #!define FLT_NATS 5
-
 #!define FLB_NATB 6
 #!define FLB_NATSIPPING 7
 
@@ -96,7 +92,7 @@ tcp_connection_lifetime=3605
 ####### Modules Section ########
 
 /* set paths to location of modules (to sources or installation folders) */
-# mpath="/usr/local/lib/kamailio/modules/"
+mpath="/usr/local/lib64/kamailio/modules/"
 
 loadmodule "jsonrpcs.so"
 loadmodule "kex.so"
@@ -116,7 +112,6 @@ loadmodule "xlog.so"
 loadmodule "sanity.so"
 loadmodule "ctl.so"
 loadmodule "cfg_rpc.so"
-loadmodule "acc.so"
 loadmodule "kemix.so"
 
 #!ifdef WITH_AUTH
@@ -182,23 +177,6 @@ modparam("registrar", "gruu_enabled", 0)
 
 # ----- db_text params -----
 modparam("db_text", "db_mode", 1)
-
-# ----- acc params -----
-/* what special events should be accounted ? */
-modparam("acc", "early_media", 0)
-modparam("acc", "report_ack", 0)
-modparam("acc", "report_cancels", 0)
-/* by default we do not adjust the direct of the sequential requests.
- * if you enable this parameter, be sure the enable "append_fromtag"
- * in "rr" module */
-modparam("acc", "detect_direction", 0)
-/* account triggers (flags) */
-modparam("acc", "log_flag", FLT_ACC)
-modparam("acc", "log_missed_flag", FLT_ACCMISSED)
-modparam("acc", "log_extra",
-	"src_user=$fU;src_domain=$fd;src_ip=$si;"
-	"dst_ouser=$tU;dst_user=$rU;dst_domain=$rd")
-modparam("acc", "failed_transaction_flag", FLT_ACCFAILED)
 
 # ----- usrloc params -----
 /* enable DB persistency for location entries */
