--- a/platform/kamailio/kamailio.cfg
+++ b/platform/kamailio/kamailio.cfg
@@ -1,35 +1,7 @@
 #!KAMAILIO
-#
-# *** To enable authentication execute:
-#     - enable mysql
-#     - define WITH_AUTH
-#     - add users using 'kamctl'
-#
-# *** To enable IP authentication execute:
-#     - enable mysql
-#     - enable authentication
-#     - define WITH_IPAUTH
-#     - add IP addresses with group id '1' to 'address' table
-#
-# *** To enable persistent user location execute:
-#     - enable mysql
-#     - define WITH_USRLOCDB
-#
-# *** To enable nat traversal execute:
-#     - define WITH_NAT
-#     - install RTPProxy: http://www.rtpproxy.org
-#     - start RTPProxy:
-#        rtpproxy -l _your_public_ip_ -s udp:localhost:7722
-#     - option for NAT SIP OPTIONS keepalives: WITH_NATSIPPING
-#
-# *** To enable TLS support execute:
-#     - adjust CFGDIR/tls.cfg as needed
-#     - define WITH_TLS
-#
 
-# #!define WITH_AUTH
-# #!define WITH_IPAUTH
-# #!define WITH_USRLOCDB
+#!define WITH_AUTH
+#!define WITH_IPAUTH
 
 ####### Defined Values #########
 # #!define MULTIDOMAIN 0
@@ -46,14 +18,10 @@
 #!define DBURL "text:///usr/local/etc/kamailio/dbtext"
 
 ### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
-debug=4
-log_stderror=yes
-
+debug=2
+log_stderror=no
 memdbg=5
 memlog=5
-
-log_prefix="LUA {$rm}: "
-
 latency_cfg_log=2
 latency_log=2
 latency_limit_action=100000
@@ -61,33 +29,31 @@ latency_limit_db=200000
 log_facility=LOG_LOCAL5
 
 fork=yes
-children=2
+children=15
 
-/* uncomment the next line to disable TCP (default on) */
-#disable_tcp=yes
+tcp_connect_timeout=5
+tcp_send_timeout=2
+# life time of TCP connection when there is no traffic
+# - a bit higher than registration expires to cope with UA behind NAT
+tcp_connection_lifetime=3605
+tcp_accept_no_cl=yes
+tcp_rd_buf_size=16384
 
-/* uncomment the next line to disable the auto discovery of local aliases
- * based on reverse DNS on IPs (default on) */
-#auto_aliases=no
+# disable the auto discovery of local aliases based on reverse DNS on IPs (default on)
+auto_aliases=no
 
 /* add local domain aliases */
 #alias="sip.mydomain.com"
 
-/* uncomment and configure the following line if you want Kamailio to
- * bind on a specific interface/port/proto (default bind on all available) */
-#listen=udp:10.0.0.10:5060
-
-/* port to listen to
- * - can be specified more than once if needed to listen on many ports */
-port=5080
-
 #!ifdef WITH_TLS
 enable_tls=yes
+listen=tls:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 #!endif
 
-# life time of TCP connection when there is no traffic
-# - a bit higher than registration expires to cope with UA behind NAT
-tcp_connection_lifetime=3605
+/* uncomment and configure the following line if you want Kamailio to
+ * bind on a specific interface/port/proto (default bind on all available) */
+listen=udp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
+listen=tcp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 
 ####### Modules Section ########
 
@@ -137,16 +103,33 @@ loadmodule "pike.so"
 loadmodule "app_lua.so"
 
 # ----------------- setting module-specific parameters ---------------
+loadmodule "db_redis.so"
+# #!define DBURL_USRLOC "redis://127.0.0.1:6379/5"
+#!define DBURL_AUTH   "redis://127.0.0.1:6379/6"
+#!define DBURL_PERM   "redis://127.0.0.1:6379/7"
+#!define DBURL_DLG    "redis://127.0.0.1:6379/8"
+
+modparam("db_redis", "schema_path", "/usr/local/share/kamailio/db_redis/kamailio")
+modparam("db_redis", "keys", "version=entry:table_name")
+# modparam("db_redis", "keys", "location=entry:ruid&usrdom:username,domain&timer:partition,keepalive")
+modparam("db_redis", "keys", "subscriber=entry:username,domain")
+modparam("db_redis", "keys", "dialog=entry:hash_entry,hash_id&cid:callid")
+modparam("db_redis", "keys", "dialog_vars=entry:hash_entry,hash_id,dialog_key&dialog:hash_entry,hash_id")
+
+# modparam("usrloc", "db_url", DBURL_USRLOC)
+#modparam("auth_db", "db_url", DBURL_AUTH)
+#modparam("permissions", "db_url", DBURL_PERM)
+#modparam("dialog", "db_url", DBURL_DLG)
 
 # ----- jsonrpcs params -----
 modparam("jsonrpcs", "pretty_format", 1)
 /* set the path to RPC fifo control file */
-# modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
+modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
 /* set the path to RPC unix socket control file */
-# modparam("jsonrpcs", "dgram_socket", "/run/kamailio/kamailio_rpc.sock")
+modparam("jsonrpcs", "dgram_socket", "/run/kamailio/kamailio_rpc.sock")
 
 # ----- ctl params -----
-#modparam("ctl", "binrpc", "unix:/run/kamailio/kamailio_ctl")
+modparam("ctl", "binrpc", "unix:/run/kamailio/kamailio_ctl")
 
 # ----- tm params -----
 # auto-discard branches from previous serial forking leg
@@ -179,26 +162,20 @@ modparam("registrar", "gruu_enabled", 0)
 modparam("db_text", "db_mode", 1)
 
 # ----- usrloc params -----
-/* enable DB persistency for location entries */
-modparam("usrloc", "preload", "location")
-#!ifdef WITH_USRLOCDB
-modparam("usrloc", "db_url", DBURL)
-modparam("usrloc", "db_mode", 2)
-modparam("usrloc", "use_domain", MULTIDOMAIN)
-#!endif
+modparam("usrloc", "db_mode", 0)
 
 
 # ----- auth_db params -----
 #!ifdef WITH_AUTH
-modparam("auth_db", "db_url", DBURL)
+modparam("auth_db", "db_url", DBURL_AUTH)
 modparam("auth_db", "calculate_ha1", yes)
 modparam("auth_db", "password_column", "password")
 modparam("auth_db", "load_credentials", "")
-modparam("auth_db", "use_domain", MULTIDOMAIN)
+modparam("auth_db", "use_domain", 1)
 
 # ----- permissions params -----
 #!ifdef WITH_IPAUTH
-modparam("permissions", "db_url", DBURL)
+modparam("permissions", "db_url", DBURL_PERM)
 modparam("permissions", "db_mode", 1)
 #!endif
 
