--- a/platform/kamailio/rsyslog.d/kamailio.rsyslog.conf
+++ b/platform/kamailio/rsyslog.d/kamailio.rsyslog.conf
@@ -1,2 +1,3 @@
-local5.*    /var/log/kamailio/kamailio.log
-
+#local5.*    /var/log/kamailio/kamailio.log
+if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
+& ~
