--- a/platform/freeswitch/system/logrotate.d/freeswitch.logrotate.conf
+++ b/platform/freeswitch/system/logrotate.d/freeswitch.logrotate.conf
@@ -1,13 +1,15 @@
 /var/log/freeswitch/*.log {
-	rotate 100
-	daily
+    daily
+    rotate 60
 	missingok
-	compress
-	delaycompress
+    nocreate
 	copytruncate
-	sharedscripts
-	nocreate
-	postrotate
+    compress
+    delaycompress
+    sharedscripts
+    su freeswitch freeswitch
+    postrotate
 		#/usr/bin/fscli -x 'fsctl send_sighup' > /dev/null 2> /dev/null
-        /bin/kill -HUP `cat /var/run/freeswitch.pid 2>/dev/null` 2> /dev/null || true
-	endscript
+        /bin/kill -HUP `cat /var/run/freeswitch/freeswitch.pid 2> /dev/null` 2> /dev/null || true
+    endscript
+}
