--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -1,8 +1,4 @@
 #!KAMAILIO
-
-#!define WITH_AUTH
-#!define WITH_IPAUTH
-
 ####### Defined Values #########
 # #!define MULTIDOMAIN 0
 
@@ -14,9 +10,6 @@
 #!define FLB_NATSIPPING 7
 
 ####### Global Parameters #########
-
-#!define DBURL "text:///usr/local/etc/kamailio/dbtext"
-
 ### LOG Levels: 3=DBG, 2=INFO, 1=NOTICE, 0=WARN, -1=ERR
 debug=2
 log_stderror=no
@@ -29,7 +22,7 @@ latency_limit_db=200000
 log_facility=LOG_LOCAL5
 
 fork=yes
-children=15
+children=8
 
 tcp_connect_timeout=5
 tcp_send_timeout=2
@@ -55,11 +48,13 @@ listen=tls:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 listen=udp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 listen=tcp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 
-####### Modules Section ########
+# server header
+server_header="Server: LibreAlp"
 
+####### Modules Section ########
 /* set paths to location of modules (to sources or installation folders) */
 mpath="/usr/local/lib64/kamailio/modules/"
-
+# ----------------- load modules ---------------
 loadmodule "jsonrpcs.so"
 loadmodule "kex.so"
 loadmodule "corex.so"
@@ -68,129 +63,109 @@ loadmodule "tmx.so"
 loadmodule "sl.so"
 loadmodule "rr.so"
 loadmodule "pv.so"
+loadmodule "dialog.so"
 loadmodule "maxfwd.so"
 loadmodule "usrloc.so"
-loadmodule "db_text.so"
 loadmodule "registrar.so"
 loadmodule "textops.so"
+loadmodule "textopsx.so"
 loadmodule "siputils.so"
-loadmodule "xlog.so"
 loadmodule "sanity.so"
 loadmodule "ctl.so"
 loadmodule "cfg_rpc.so"
+loadmodule "regex.so"
+loadmodule "uac.so"
 loadmodule "kemix.so"
-
-#!ifdef WITH_AUTH
 loadmodule "auth.so"
 loadmodule "auth_db.so"
-#!ifdef WITH_IPAUTH
 loadmodule "permissions.so"
-#!endif
-#!endif
-
+loadmodule "dispatcher.so"
 loadmodule "nathelper.so"
-
 #!ifdef WITH_TLS
 loadmodule "tls.so"
 #!endif
-
 loadmodule "debugger.so"
-
-# ---- antiflood -----
 loadmodule "htable.so"
 loadmodule "pike.so"
-
 loadmodule "app_lua.so"
-
-# ----------------- setting module-specific parameters ---------------
 loadmodule "db_redis.so"
-# #!define DBURL_USRLOC "redis://127.0.0.1:6379/5"
+# ----------------- setting module-specific parameters ---------------
+
+#!define DBURL_USRLOC "redis://127.0.0.1:6379/5"
 #!define DBURL_AUTH   "redis://127.0.0.1:6379/6"
 #!define DBURL_PERM   "redis://127.0.0.1:6379/7"
 #!define DBURL_DLG    "redis://127.0.0.1:6379/8"
-
 modparam("db_redis", "schema_path", "/usr/local/share/kamailio/db_redis/kamailio")
 modparam("db_redis", "keys", "version=entry:table_name")
-# modparam("db_redis", "keys", "location=entry:ruid&usrdom:username,domain&timer:partition,keepalive")
+modparam("db_redis", "keys", "location=entry:ruid&usrdom:username,domain&timer:partition,keepalive")
 modparam("db_redis", "keys", "subscriber=entry:username,domain")
 modparam("db_redis", "keys", "dialog=entry:hash_entry,hash_id&cid:callid")
 modparam("db_redis", "keys", "dialog_vars=entry:hash_entry,hash_id,dialog_key&dialog:hash_entry,hash_id")
-
-# modparam("usrloc", "db_url", DBURL_USRLOC)
+#modparam("usrloc", "db_url", DBURL_USRLOC)
 #modparam("auth_db", "db_url", DBURL_AUTH)
 #modparam("permissions", "db_url", DBURL_PERM)
 #modparam("dialog", "db_url", DBURL_DLG)
 
-# ----- jsonrpcs params -----
+# ------ RPC interface over JSON-RPC ------
 modparam("jsonrpcs", "pretty_format", 1)
-/* set the path to RPC fifo control file */
 modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
-/* set the path to RPC unix socket control file */
 modparam("jsonrpcs", "dgram_socket", "/run/kamailio/kamailio_rpc.sock")
-
-# ----- ctl params -----
 modparam("ctl", "binrpc", "unix:/run/kamailio/kamailio_ctl")
 
-# ----- tm params -----
+# ------ Stateful Processing of SIP Transactions -----
 # auto-discard branches from previous serial forking leg
 modparam("tm", "failure_reply_mode", 3)
 # default retransmission timeout: 30sec
 modparam("tm", "fr_timer", 30000)
 # default invite retransmission timeout after 1xx: 120sec
 modparam("tm", "fr_inv_timer", 120000)
+modparam("tm", "auto_inv_100_reason", "LibreSBC Trying")
 
-
-# ----- rr params -----
+# ---- Record Routing Logic -----
 # add value to ;lr param to cope with most of the UAs
 modparam("rr", "enable_full_lr", 1)
 # do not append from tag to the RR (no need for this script)
 modparam("rr", "append_fromtag", 0)
 
+# ---- stateful dialog state (not just transaction state by rr) ----
+modparam("dialog", "db_mode", 0)
 
-# ----- registrar params -----
-modparam("registrar", "method_filtering", 1)
-/* uncomment the next line to disable parallel forking via location */
-# modparam("registrar", "append_branches", 0)
-/* uncomment the next line not to allow more than 10 contacts per AOR */
-#modparam("registrar", "max_contacts", 10)
-# max value for expires of registrations
-modparam("registrar", "max_expires", 3600)
-# set it to 1 to enable GRUU
-modparam("registrar", "gruu_enabled", 0)
-
-# ----- db_text params -----
-modparam("db_text", "db_mode", 1)
-
-# ----- usrloc params -----
+# ----- User Location -----
 modparam("usrloc", "db_mode", 0)
 
+# ----- Register processing logic, location managed by the usrloc -----
+modparam("registrar", "method_filtering", 0)
+/* allow only 1 contacts per AOR */
+modparam("registrar", "max_contacts", 1)
+# value for expires of registrations
+modparam("registrar", "max_expires", 3600)
+modparam("registrar", "min_expires", 60)
 
 # ----- auth_db params -----
-#!ifdef WITH_AUTH
 modparam("auth_db", "db_url", DBURL_AUTH)
 modparam("auth_db", "calculate_ha1", yes)
 modparam("auth_db", "password_column", "password")
-modparam("auth_db", "load_credentials", "")
+modparam("auth_db", "load_credentials", "$avp(authname)=username")
 modparam("auth_db", "use_domain", 1)
 
 # ----- permissions params -----
-#!ifdef WITH_IPAUTH
 modparam("permissions", "db_url", DBURL_PERM)
 modparam("permissions", "db_mode", 1)
-#!endif
 
-#!endif
+# ----- SIP load balancer -----
+modparam("dispatcher", "list_file", "/usr/local/etc/kamailio/dispatcher.list")
+modparam("dispatcher", "flags", 2)
+modparam("dispatcher", "xavp_dst", "_dsdst_")
 
 # ----- nathelper params -----
-modparam("nathelper", "natping_interval", 30)
+modparam("nathelper", "natping_interval", 300)
 modparam("nathelper", "ping_nated_only", 1)
 modparam("nathelper", "sipping_bflag", FLB_NATSIPPING)
-modparam("nathelper", "sipping_from", "sip:pinger@kamailio.org")
+modparam("nathelper", "sipping_from", "sip:nathelper@libre.sbc")
 
 # params needed for NAT traversal in other modules
 modparam("nathelper|registrar", "received_avp", "$avp(RECEIVED)")
 modparam("usrloc", "nat_bflag", FLB_NATB)
-
 
 #!ifdef WITH_TLS
 # ----- tls params -----
@@ -200,15 +175,13 @@ modparam("tls", "config", "/usr/local/etc/kamailio/tls.cfg")
 # ----- debugger params -----
 modparam("debugger", "cfgtrace", 1)
 
-# ----- pike params -----
+# ----- pike anti-flooding -----
 modparam("pike", "sampling_time_unit", 2)
 modparam("pike", "reqs_density_per_unit", 16)
 modparam("pike", "remove_latency", 4)
-
-# ----- htable params -----
-# ip ban htable with autoexpire after 5 minutes
-modparam("htable", "htable", "ipban=>size=8;autoexpire=300;")
-
+# ----- shared memory hash table -----
+# ip ban htable with autoexpire after 10 minutes
+modparam("htable", "htable", "ipban=>size=8;autoexpire=600;")
 
 # ----- LUA ROUTING ENGINE -----
 modparam("app_lua", "load", "{{rundir}}/callng/kami.lua")
