outbound require for rr module

--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -60,6 +60,7 @@ loadmodule "kex.so"
 loadmodule "corex.so"
 loadmodule "tm.so"
 loadmodule "tmx.so"
+loadmodule "outbound"
 loadmodule "sl.so"
 loadmodule "rr.so"
 loadmodule "pv.so"
