simplify syslog filter

--- a/platform/kamailio/system/rsyslog.d/kamailio.conf
+++ b/platform/kamailio/system/rsyslog.d/kamailio.conf
@@ -1,3 +1,4 @@
-#local5.*    /var/log/kamailio/kamailio.log
-if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
-& ~
+local5.*    /var/log/kamailio/kamailio.log
+# :programname, startswith, "kamailio" ~
+#if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
+#& ~
