catch the progkam

--- a/platform/kamailio/system/rsyslog.d/kamailio.conf
+++ b/platform/kamailio/system/rsyslog.d/kamailio.conf
@@ -1,4 +1,4 @@
+#:programname, contains, "kamailio" ~
 local5.*    /var/log/kamailio/kamailio.log
-# :programname, startswith, "kamailio" ~
-#if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
-#& ~
+if $programname == 'kamailio' then /var/log/kamailio/kamailio.log
+& ~
