--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -74,7 +74,7 @@ loadmodule "siputils.so"
 loadmodule "sanity.so"
 loadmodule "ctl.so"
 loadmodule "cfg_rpc.so"
-loadmodule "regex.so"
+#loadmodule "regex.so"
 loadmodule "uac.so"
 loadmodule "kemix.so"
 loadmodule "auth.so"
@@ -126,7 +126,7 @@ modparam("tm", "auto_inv_100_reason", "LibreSBC Trying")
 # add value to ;lr param to cope with most of the UAs
 modparam("rr", "enable_full_lr", 1)
 # do not append from tag to the RR (no need for this script)
-modparam("rr", "append_fromtag", 0)
+# modparam("rr", "append_fromtag", 0)
 
 # ---- stateful dialog state (not just transaction state by rr) ----
 modparam("dialog", "db_mode", 0)
