--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -31,12 +31,11 @@ tcp_send_timeout=2
 tcp_connection_lifetime=3605
 tcp_accept_no_cl=yes
 tcp_rd_buf_size=16384
-
 # disable the auto discovery of local aliases based on reverse DNS on IPs (default on)
 auto_aliases=no
 
 /* add local domain aliases */
-#alias="sip.mydomain.com"
+alias="libre.sbc"
 
 #!ifdef WITH_TLS
 enable_tls=yes
@@ -49,7 +48,7 @@ listen=udp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 listen=tcp:{{ansible_host}}:5080 advertise {{ansible_host}}:5080
 
 # server header
-server_header="Server: LibreAlp"
+server_header="Server: LibreSBC - Access Layer Proxy"
 
 ####### Modules Section ########
 /* set paths to location of modules (to sources or installation folders) */
@@ -72,8 +71,6 @@ loadmodule "textops.so"
 loadmodule "textopsx.so"
 loadmodule "siputils.so"
 loadmodule "sanity.so"
-loadmodule "ctl.so"
-loadmodule "cfg_rpc.so"
 loadmodule "uac.so"
 loadmodule "kemix.so"
 loadmodule "auth.so"
@@ -92,7 +89,6 @@ loadmodule "app_lua.so"
 modparam("jsonrpcs", "pretty_format", 1)
 modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
 modparam("jsonrpcs", "dgram_socket", "/run/kamailio/kamailio_rpc.sock")
-modparam("ctl", "binrpc", "unix:/run/kamailio/kamailio_ctl")
 
 # ------ Stateful Processing of SIP Transactions -----
 # auto-discard branches from previous serial forking leg
