--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -151,5 +151,5 @@ modparam("pike", "remove_latency", 4)
 modparam("htable", "htable", "ipban=>size=8;autoexpire=600;")
 
 # ----- LUA ROUTING ENGINE -----
-modparam("app_lua", "load", "{{rundir}}/callng/kami.lua")
+modparam("app_lua", "load", "{{destinationdir}}/callng/kami.lua")
 cfgengine "lua"
