--- a/platform/libre/system/systemd/liberator.service
+++ b/platform/libre/system/systemd/liberator.service
@@ -9,9 +9,9 @@ Type=simple
 User=root
 Group=root
 #Environment="ENV=cloud"
-WorkingDirectory={{rundir}}/liberator
+WorkingDirectory={{destinationdir}}/liberator
 #ExecStart=/usr/local/bin/liberator.sh
-ExecStart=/usr/bin/python3 {{rundir}}/liberator/main.py
+ExecStart=/usr/bin/python3 {{destinationdir}}/liberator/main.py
 
 SyslogIdentifier=libresbc
 SyslogFacility=5
