change api name

--- a/platform/nginx/libresbc.conf
+++ b/platform/nginx/libresbc.conf
@@ -42,8 +42,8 @@ server {
 
         server_name _;
 
-        {% if interface.management.apis.fsxmlapi -%}
-        location /fsxmlapi {
+        {% if interface.management.apis.cfgapi -%}
+        location /cfgapi {
                 limit_req zone=restclientlimiter burst=8 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
                 # First attempt to serve request as file, then
@@ -80,7 +80,7 @@ server {
         }
         {% endif %}
 
-        location ~ ^/(?!(libreapi|fsxmlapi)) {
+        location ~ ^/(?!(libreapi|cfgapi)) {
                 limit_req zone=purecodelimiter burst=1 nodelay; 
                 limit_req_status 429;   # 429 Too Many Requests (RFC 6585)
                 #auth_basic "Restricted Content";
