--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -47,15 +47,18 @@ listen=tls:{{ansible_host}}:5061 advertise {{ansible_host}}:5061
  * bind on a specific interface/port/proto (default bind on all available) */
 listen=udp:{{ansible_host}}:5060 advertise {{ansible_host}}:5060
 listen=tcp:{{ansible_host}}:5060 advertise {{ansible_host}}:5060
+# DEFAULT INSIDE INTERFACE 
+listen=udp:10.104.0.2:5060
 
 # server header
-server_header="Server: LibreSBC - Access Layer Proxy"
+server_header="Server: AccessLayerService"
 
 ####### Modules Section ########
 /* set paths to location of modules (to sources or installation folders) */
 mpath="/usr/local/lib64/kamailio/modules/"
 # ----------------- load modules ---------------
 loadmodule "jsonrpcs.so"
+loadmodule "ctl.so"
 loadmodule "kex.so"
 loadmodule "corex.so"
 loadmodule "tm.so"
@@ -90,6 +93,7 @@ loadmodule "app_lua.so"
 modparam("jsonrpcs", "pretty_format", 1)
 modparam("jsonrpcs", "fifo_name", "/run/kamailio/kamailio_rpc.fifo")
 modparam("jsonrpcs", "dgram_socket", "/run/kamailio/kamailio_rpc.sock")
+modparam("ctl", "binrpc", "unix:/run/kamailio/kamailio_ctl")
 
 # ------ Stateful Processing of SIP Transactions -----
 # auto-discard branches from previous serial forking leg
@@ -110,10 +114,13 @@ modparam("rr", "enable_full_lr", 1)
 modparam("dialog", "db_mode", 0)
 
 # ----- User Location -----
+modparam("usrloc", "preload", "libreusrloc")
 modparam("usrloc", "db_mode", 0)
+modparam("usrloc", "hash_size", 16)
+modparam("usrloc", "use_domain", 1)
 
 # ----- Register processing logic, location managed by the usrloc -----
-modparam("registrar", "method_filtering", 0)
+# modparam("registrar", "method_filtering", 0)
 /* allow only 1 contacts per AOR */
 modparam("registrar", "max_contacts", 1)
 # value for expires of registrations
