--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -21,6 +21,9 @@ latency_limit_action=100000
 latency_limit_db=200000
 log_facility=LOG_LOCAL5
 
+# multihomed
+mhomed=1
+
 fork=yes
 children=8
 
@@ -114,7 +117,7 @@ modparam("rr", "enable_full_lr", 1)
 modparam("dialog", "db_mode", 0)
 
 # ----- User Location -----
-modparam("usrloc", "preload", "libreusrloc")
+modparam("usrloc", "preload", "libreul")
 modparam("usrloc", "db_mode", 0)
 modparam("usrloc", "hash_size", 16)
 modparam("usrloc", "use_domain", 1)
