--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -21,9 +21,6 @@ latency_limit_action=100000
 latency_limit_db=200000
 log_facility=LOG_LOCAL5
 
-# multihomed
-mhomed=1
-
 fork=yes
 children=8
 
@@ -90,6 +87,8 @@ loadmodule "debugger.so"
 loadmodule "htable.so"
 loadmodule "pike.so"
 loadmodule "app_lua.so"
+loadmodule "xlog.so"
+
 # ----------------- setting module-specific parameters ---------------
 
 # ------ RPC interface over JSON-RPC ------
@@ -128,7 +127,7 @@ modparam("usrloc", "use_domain", 1)
 modparam("registrar", "max_contacts", 1)
 # value for expires of registrations
 modparam("registrar", "max_expires", 3600)
-modparam("registrar", "min_expires", 60)
+modparam("registrar", "min_expires", 300)
 
 # ----- SIP load balancer -----
 modparam("dispatcher", "list_file", "/usr/local/etc/kamailio/dispatcher.list")
