--- a/platform/kamailio/self/kamailio.cfg
+++ b/platform/kamailio/self/kamailio.cfg
@@ -24,6 +24,9 @@ log_facility=LOG_LOCAL5
 fork=yes
 children=8
 
+# multi-homed
+mhomed = 1
+
 tcp_connect_timeout=5
 tcp_send_timeout=2
 # life time of TCP connection when there is no traffic
@@ -110,6 +113,7 @@ modparam("tm", "auto_inv_100_reason", "LibreSBC Trying")
 modparam("rr", "enable_full_lr", 1)
 # do not append from tag to the RR (no need for this script)
 # modparam("rr", "append_fromtag", 0)
+modparam("rr", "force_send_socket", 1)
 
 # ---- stateful dialog state (not just transaction state by rr) ----
 modparam("dialog", "db_mode", 0)
